Removed my picture from the default layout and replaced with placehold.it link.

--- a/layout/default/index.htm
+++ b/layout/default/index.htm
@@ -1,6 +1,6 @@
 { include header.htm }
 
 <div id="col2">
-	<img id="frontpage_photo" src='{ import "photo.jpeg" from img }'>
+	<img id="frontpage_photo" src='http://placehold.it/400x600'>
 
 { include footer.htm }
