--- a/admin/system/templates/login.html
+++ b/admin/system/templates/login.html
@@ -56,7 +56,7 @@
 					<img alt="Login to Foundation" src="system/img/login.png">
 					<input class="finput username required" name="username" placeholder="Username" type="text"><br>
 					<input class="finput password required" name="password" placeholder="Password" type="password"><br>
-					<input class="submit" name="submit" type="submit" value="Login">
+					<input class="submit action" name="submit" type="submit" value="Login">
 					<!--<div id="remember" class="fcheckbox"></div>-->
 					<input id="remember" name="remember" type="checkbox"><label class="login_label" for="remember">remember me</label>
 				</form>
