Redirecting from index.php -> home, and about.php -> about wasn't working. It works now.
The necessary link changes in the layout and Parsel were also made.

--- a/layout/default/header.htm
+++ b/layout/default/header.htm
@@ -10,7 +10,7 @@
 	
 	<body>
 		<div id="col1">
-			<div id="title"><a href="/index.php">{ site.title }</a></div>
+			<div id="title"><a href="/home">{ site.title }</a></div>
 			<p id="subtitle">designer <span id="ampersand">&</span> developer</p>
 			<nav>
 				{ display nav as list }
