--- a/layout/default/footer.htm
+++ b/layout/default/footer.htm
@@ -1,5 +1,5 @@
 			<footer>
-				<p>&copy;2011 { user.name }, all rights reserved. { display site.adminlink }</p>
+				<p>&copy;2011 { show the user's name }, all rights reserved. { show the site's admin }</p>
 			</footer>
 		</div>
 	</body>
