This commit deals with captions in the UI and other bug fixes.
• Enables captions to be viewed and edited in the front end.

• There is also a small UI fix that shows what project you are currently
viewing (sequence).

• There is also a bug fix regarding displaying the image that was jsut
uploaded.

• The create page javascript files have finally been renamed to more
appropriate filenames.

--- a/admin/system/templates/create.html
+++ b/admin/system/templates/create.html
@@ -108,10 +108,12 @@
 						<p id="nocontent">There is no content in this project.</p>
 					{% else %}
 						{% for image in images %}
-							{% if image.medium != '' %}
+							{% if image.medium != "/" %}
 								{% set source = image.medium %}
-							{% else %}
+							{% elseif image.small != "/" %}
 								{% set source = image.small %}
+							{% else %}
+								{% set source = image.full %}
 							{% endif %}
 							<li class="item">
 								<img data-coords="{{ image.coords }}" data-id="{{ image.id }}" data-link="{{ image.link }}" 
@@ -156,6 +158,6 @@
 	<script src="/admin/system/js/jquery/jquery.masonry.min.js"></script>
 	<script src="/admin/system/js/jquery/fileuploader.js"></script>
 
+	<script src="/admin/system/js/fpage/create.lib.js"></script>
 	<script src="/admin/system/js/fpage/create.js"></script>
-	<script src="/admin/system/js/fpage/create-info.js"></script>
 {% endblock %}
