--- a/admin/system/styles/style.css
+++ b/admin/system/styles/style.css
@@ -531,7 +531,26 @@
 	.inner_text#large {
 		font-size: 18px;
 		}
+
+	span#sequence {
+		font-weight: bold;
+		margin-top: 20px;
+		font-size: 18px;
+		float: left;
+		}
 		
+	span#sequence span:not(#this_sequence) {
+		margin-top: 13px;
+		float:left;
+		}
+		
+	span#this_sequence {
+		margin-right: 2px;
+		margin-top: 4px;
+		font-size: 28px;
+		float: left;
+		}
+
 	#crop_btn {
 		text-shadow: 0px 1px 2px #FFDEDC;
 		padding: 5px 0 3px 0;
