--- a/admin/system/templates/base.html
+++ b/admin/system/templates/base.html
@@ -36,6 +36,8 @@
 	<link rel="stylesheet" href="/admin/system/styles/finput.css?v=1">
   <link rel="stylesheet" href="/admin/system/styles/markitup.css?v=1">
  
+	{%block styles %}{% endblock %}
+ 
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="/admin/system/js/modernizr-1.5.min.js"></script>
 </head>
